# RAPT

./: .gitignore  LICENSE  README.md  pixi.toml  pyproject.toml
checkpoints/g1_29dof_velocity/: calibration.csv  calibration.json  config.json  deploy_config.csv  obs_stats.csv  obs_stats.json
data/: README.md
data/sample/: eval.npz  train.npz
datasets/: DATASET_CARD.md
deploy/: README.md
deploy/cpp/: CMakeLists.txt  main.cpp  rapt_monitor.hpp
deploy/cpp/reference/: anomaly_detector_fdm.h
deploy/python/: rapt_monitor.py  replay_example.py
docs/: index.html
examples/: quickstart.py
rapt/: __init__.py  checkpoint.py  config.py  data.py  detector.py  metrics.py  model.py  onnx_export.py  saliency.py  train.py
rapt/diagnosis/: __init__.py  llm.py  prompt.py  render.py  taxonomy.py
reproduce/: README.md  ood_injection.py  run_baselines.py
reproduce/baselines/: __init__.py  deep_svdd.py  isolation_forest.py  lstm_vae.py
reproduce/isaaclab/: collect_and_train_lstmvae.py  collect_and_train_patchad.py  collect_and_train_rapt.py  collect_rapt_datasets.py  export_to_onnx.py  forest_and_range_experiment.py  ood_injection_lib.py  play_with_rapt.py  svdd_and_range_experiment.py
reproduce/isaaclab/analysis/: analyze_feature_importance.py  collate_ablation_results.py  rank_taguchi_results.py
reproduce/isaaclab/sweeps/: run_taguchi_ablation.sh  train_fdm_exp.sh
reproduce/realworld/: test_real_world_iso.py  test_real_world_lstm.py  test_real_world_patchad.py  test_real_world_rapt.py  test_real_world_svdd.py
scripts/: attribute.py  benchmark.py  calibrate.py  convert_legacy_checkpoint.py  detect.py  diagnose.py  evaluate.py  evaluate_paper.py  export_onnx.py  import_deploy_logs.py  make_synthetic_data.py  train.py  upload_datasets_hf.py
